v0.2-0  (2022-12-06; not yet released))

  o support "zoo::yearmon" timestamps

  o provide options to automatically place (and
    displace) labels to avoid overlap

  o ....

v0.1-0  (2019-09-19)

  o initial release: the package provides a single
    function, 'plotseries', that plots one or several
    (financial) time-series