@@ -1,6 +1,10 @@
 v0.2-0  (2022-12-06; not yet released))
 
-  o support "zoo::yearmon" timestamps
+  o the 'par' settings that plotseries changes
+    internally are restored to previous values when the
+    function ends
+
+  o support for "zoo::yearmon" timestamps
 
   o provide options to automatically place (and
     displace) labels to avoid overlap
